--- a/backend/composer.json
+++ b/backend/composer.json
@@ -12,7 +12,10 @@
         "php": "^8.2",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/socialite": "^5.19",
+        "laravel/tinker": "^2.10.1",
+        "socialiteproviders/google": "^4.1",
+        "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
