--- a/backend/compose.dev.backend.yaml
+++ b/backend/compose.dev.backend.yaml
@@ -21,5 +21,5 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/var/www/html:cached     # Código fuente
+      - .:/var/www/html
       - /var/www/html/vendor
