--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -23,7 +23,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - ./backend:/var/www/html:cached
+      - ./backend:/var/www/html
       - /var/www/html/vendor
     networks:
       - app-network
